--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -18,83 +18,83 @@ body {
 
 @font-face{
   font-family: "Gotham-Thin";
-  src: font-url('Gotham-Thin.otf') format('opentype');
+  src: url('fonts/Gotham-Thin.otf') format('opentype');
 }
 
 @font-face{
   font-family: "Gotham-ThinIta";
-  src: font-url('Gotham-ThinIta.otf') format('opentype');
+  src: url('fonts/Gotham-ThinIta.otf') format('opentype');
 }
 
 @font-face{
   font-family: "Gotham-xLight";
-  src: font-url('Gotham-XLight.otf') format('opentype');
+  src: url('fonts/Gotham-XLight.otf') format('opentype');
 }
 
 @font-face{
   font-family: "Gotham-xLightIta";
-  src: font-url('Gotham-XLightIta.otf') format('opentype');
+  src: url('fonts/Gotham-XLightIta.otf') format('opentype');
 }
 
 @font-face{
   font-family: "Gotham-Light";
-  src: font-url('Gotham-Light.otf') format('opentype');
+  src: url('fonts/Gotham-Light.otf') format('opentype');
 }
 
 @font-face{
   font-family: "Gotham-LightIta";
-  src: font-url('Gotham-LightIta.otf') format('opentype');
+  src: url('fonts/Gotham-LightIta.otf') format('opentype');
 }
 
 @font-face{
   font-family: "Gotham-Book";
   font-weight: bolder;
-  src: font-url('Gotham-Book.otf') format('opentype');
+  src: url('fonts/Gotham-Book.otf') format('opentype');
 }
 
 @font-face{
   font-family: "Gotham-BookIta";
   font-weight: bolder;
-  src: font-url('Gotham-BookIta.otf') format('opentype');
+  src: url('fonts/Gotham-BookIta.otf') format('opentype');
 }
 
 @font-face{
   font-family: "Gotham";
-  src: font-url('Gotham-Medium.otf') format('opentype');
+  src: url('fonts/Gotham-Medium.otf') format('opentype');
 }
 @font-face{
   font-family: "GothamIta";
-  src: font-url('Gotham-MediumIta.otf') format('opentype');
+  src: url('fonts/Gotham-MediumIta.otf') format('opentype');
 }
 
 @font-face{
   font-family: "Gotham-Bold";
-  src: font-url('Gotham-Bold.otf') format('opentype');
+  src: url('fonts/Gotham-Bold.otf') format('opentype');
 }
 
 @font-face{
   font-family: "Gotham-BoldIta";
-  src: font-url('Gotham-BoldIta.otf') format('opentype');
+  src: url('fonts/Gotham-BoldIta.otf') format('opentype');
 }
 
 @font-face{
   font-family: "Gotham-Black";
-  src: font-url('Gotham-Black.otf') format('opentype');
+  src: url('fonts/Gotham-Black.otf') format('opentype');
 }
 
 @font-face{
   font-family: "Gotham-BlackIta";
-  src: font-url('Gotham-BlackIta.otf') format('opentype');
+  src: url('fonts/Gotham-BlackIta.otf') format('opentype');
 }
 
 @font-face{
   font-family: "Gotham-Ultra";
-  src: font-url('Gotham-Ultra.otf') format('opentype');
+  src: url('fonts/Gotham-Ultra.otf') format('opentype');
 }
 
 @font-face{
   font-family: "Gotham-UlraIta";
-  src: font-url('Gotham-UltraIta.otf') format('opentype');
+  src: url('fonts/Gotham-UltraIta.otf') format('opentype');
 }
 
 
