--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -2940,7 +2940,7 @@ fieldset[disabled] a.btn {
 
 .btn-outline-primary {
   color: white;
-  -webkit-filter: drop-shadow( 0 1px 3px rgba(0,0,0,0.12),  );
+  -webkit-filter: drop-shadow( 0 1px 3px rgba(0,0,0,0.12) );
           filter: drop-shadow( 0 1px 2px rgba(0,0,0,0.24) );
   background-image: none;
   background-color: transparent;
