--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -8,7 +8,7 @@
 }
 
 .shadow {
-    -webkit-filter: drop-shadow( 0 1px 3px rgba(0,0,0,0.12),  );
+    -webkit-filter: drop-shadow( 0 1px 3px rgba(0,0,0,0.12) );
             filter: drop-shadow( 0 1px 2px rgba(0,0,0,0.24) );
 						transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
