--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,3 @@
 <h1>Welcome to the website of Faithful Word Baptist Church!</h1>
 <p>Over 13 million mp3 sermons have been downloaded from this site!</p>
+<p>JUWON</p>
