--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,36 @@
   </head>
 
   <body>
+    <div class="container">
+      <nav class="navbar navbar-toggleable-xl navbar-light">
+        <a class="shadow navbar-brand mr-auto" href="index.html">
+            <%= image_tag "FWBC-LOGO-OFFICIAL.svg", height: '61', class: "d-inline-block align-top", alt: "Faithful Word Baptist Church" %>
+        </a>
+        <ul class="nav navbar-nav ">
+          <li class="nav-item">
+              <a class="btn btn-outline-primary text-uppercase" href="preaching.html" role="button">Preaching</a>
+          </li>
+          <li class="nav-item">
+              <a class="btn btn-outline-primary text-uppercase" href="soulwinning.html" role="button">Soul Winning</a>
+          </li>
+          <li class="nav-item">
+              <a class="btn btn-outline-primary text-uppercase" href="our-pastor.html" role="button">Our Pastor</a>
+          </li>
+          <li class="nav-item">
+              <a class="btn btn-outline-primary text-uppercase" href="service-times.html" role="button">Service</a>
+          </li>
+          <li class="nav-item">
+              <a class="btn btn-outline-primary text-uppercase" href="location.html" role="button">Location</a>
+          </li>
+          <li class="nav-item">
+              <a class="btn btn-outline-primary text-uppercase" href="bible-memory.html" role="button">Bible Memory</a>
+          </li>
+          <li class="nav-item">
+              <a class="btn btn-outline-primary text-uppercase" href="events.html" role="button">Events</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <%= yield %>
   </body>
 </html>
