--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,37 @@
-<h1>Welcome to the website of Faithful Word Baptist Church!</h1>
-<p>Over 13 million mp3 sermons have been downloaded from this site!</p>
-<p>JUWON</p>
+<div class="pb-4">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+          <div class="carousel-item active ">
+            <%= image_tag "hard-preaching.jpg", alt: "First slide", class: "d-block img-fluid pixel-overlay" %>
+            <div class="carousel-caption d-none d-md-block">
+              <h1 id="" class="text-center text-uppercase display-1 shadow">hard preaching</h1>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <%= image_tag "hymns.jpg", alt: "Second slide", class: "d-block img-fluid pixel-overlay" %>
+            <div class="carousel-caption d-none d-md-block">
+              <h1 id="slider-header" class="text-center text-uppercase display-1 shadow">hymns</h1>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <%= image_tag "congregation.jpg", alt: "Third slide", class: "d-block img-fluid pixel-overlay" %>
+            <div class="carousel-caption d-none d-md-block">
+              <h1 id="slider-header" class="text-center text-uppercase display-1 shadow">king james</h1>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
