--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -651,25 +651,25 @@ h6, .h6 {
 
 .display-1 {
   font-size: 7rem;
-  font-family: Gotham-Black;
+  font-family: Gotham;
   line-height: 1.1;
 }
 
 .display-2 {
   font-size: 5.5rem;
-  font-family: Gotham-Black;
+  font-family: Gotham;
   line-height: 1.1;
 }
 
 .display-3 {
   font-size: 4.5rem;
-  font-family: Gotham-Black;
+  font-family: Gotham;
   line-height: 1.1;
 }
 
 .display-4 {
   font-size: 1.5rem;
-  font-family: Gotham-Black;
+  font-family: Gotham;
   line-height: 1.1;
 }
 
