--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,19 +7,19 @@
         </ol>
         <div class="carousel-inner" role="listbox">
           <div class="carousel-item active ">
-            <%= image_tag "hard-preaching.jpg", alt: "First slide", class: "d-block img-fluid pixel-overlay" %>
+            <%= image_tag "hard-preaching.jpg", alt: "First slide", class: "d-block img-fluid" %>
             <div class="carousel-caption d-none d-md-block">
               <h1 id="" class="text-center text-uppercase display-1 shadow">hard preaching</h1>
             </div>
           </div>
           <div class="carousel-item">
-            <%= image_tag "hymns.jpg", alt: "Second slide", class: "d-block img-fluid pixel-overlay" %>
+            <%= image_tag "hymns.jpg", alt: "Second slide", class: "d-block img-fluid" %>
             <div class="carousel-caption d-none d-md-block">
               <h1 id="slider-header" class="text-center text-uppercase display-1 shadow">hymns</h1>
             </div>
           </div>
           <div class="carousel-item">
-            <%= image_tag "congregation.jpg", alt: "Third slide", class: "d-block img-fluid pixel-overlay" %>
+            <%= image_tag "congregation.jpg", alt: "Third slide", class: "d-block img-fluid" %>
             <div class="carousel-caption d-none d-md-block">
               <h1 id="slider-header" class="text-center text-uppercase display-1 shadow">king james</h1>
             </div>
