--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,5 +39,18 @@
       </nav>
     </div>
     <%= yield %>
+    <footer>
+      <div class="container">
+        <hr>
+        <div class="row">
+          <div class="col">
+            <p>Faithful Word Baptist Church 2017<br><a href="privacy-policy.html">Privacy Policy</a> / <a href="terms-and-conditions.html">Terms and Conditions</a></p>
+          </div>
+          <div class="col">
+            <p class="text-right">Phone: (602) 456-1049<br>E-mail: faithfulword1@gmail.com</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
