--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -36,73 +36,34 @@
     </div>
 </div>
 <div class="container">
-          <div class="row">
-            <div class="col-3">
-
-              <ul class="nav flex-column nav-pills">
-                <li class="nav-item">
-                  <a class="nav-link text-uppercase text-left" href="doctrinal-statement.html" role="button">Doctrinal Statement</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled text-uppercase text-left" href="#" role="button">Foreign Languages</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-uppercase text-left" href="church-directory.html" role="button">Church Directory</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-uppercase text-left" href="https://get.google.com/albumarchive/117089279522537034856" target="_blank" role="button">Pictures</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-uppercase text-left" href="https://www.instagram.com/faithfulwordbaptist/" target="_blank" role="button">Instagram</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled text-uppercase text-left" href="#" role="button">Hymns</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-uppercase text-left" href="psalms.html" role="button">Psalms</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-uppercase text-left" href="radio.html" role="button">Radio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-uppercase text-left" href="audio-bible.html" role="button">Audio Bible <span class="badge badge-warning">NEW</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-uppercase text-left" href="http://www.fwbcbotswana.com" role="button">Botswana</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-uppercase text-left" href="malawi.html" role="button">Malawi</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-uppercase text-left" href="https://www.truebornsons.com/donate-to-fwbc/" role="button">Donate</a>
-                </li>
-              </ul>
-
-            </div>
-            <div class="col-9">
-              <h1>Welcome to the website of Faithful Word Baptist Church!</h1>
-              <p>Over 13 million mp3 sermons have been downloaded from this site!</p>
-              <p>We are a local New Testament church reaching the Phoenix area with the Gospel of Jesus Christ. Don't expect anything contemporary or liberal. We are an
-              <span class="badge badge-pill badge-success">old-fashioned</span>
-              <span class="badge badge-pill badge-success">independent</span>
-              <span class="badge badge-pill badge-success">fundamental</span>
-              <span class="badge badge-pill badge-success">King James Bible only</span>
-              <span class="badge badge-pill badge-success">soul-winning</span>
-              <span class="badge badge-pill badge-success">Baptist</span>
-              church.</p>
-              <p>Faithful Word Baptist Church is a young, family-integrated church. We would love to get to know you personally at one of our services!</p>
-              <p><span class="badge badge-warning">NEW</span> Pastor Anderson's materials have now been translated into over 115 languages!</p>
-              <p><span class="badge badge-warning">NEW</span> Check out this recent video of Pastor Anderson preaching in a public school outside of Georgetown, Guyana</p>
-              <div class="text-center">
+    <div class="row">
+        <div class="col-3">
+            <%= render "shared/side-bar" %>
+        </div>
+        <div class="col-9">
+            <h1>Welcome to the website of Faithful Word Baptist Church!</h1>
+            <p>Over 13 million mp3 sermons have been downloaded from this site!</p>
+            <p>We are a local New Testament church reaching the Phoenix area with the Gospel of Jesus Christ. Don't expect anything contemporary or liberal. We are an
+            <span class="badge badge-pill badge-success">old-fashioned</span>
+            <span class="badge badge-pill badge-success">independent</span>
+            <span class="badge badge-pill badge-success">fundamental</span>
+            <span class="badge badge-pill badge-success">King James Bible only</span>
+            <span class="badge badge-pill badge-success">soul-winning</span>
+            <span class="badge badge-pill badge-success">Baptist</span>
+            church.</p>
+            <p>Faithful Word Baptist Church is a young, family-integrated church. We would love to get to know you personally at one of our services!</p>
+            <p><span class="badge badge-warning">NEW</span> Pastor Anderson's materials have now been translated into over 115 languages!</p>
+            <p><span class="badge badge-warning">NEW</span> Check out this recent video of Pastor Anderson preaching in a public school outside of Georgetown, Guyana</p>
+            <div class="text-center">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Kdxyk7seCSI" frameborder="0" allowfullscreen></iframe>
-              </div>
-              <div class="text-center">
+            </div>
+            <div class="text-center">
                 <a class="btn btn-primary btn-lg text-center" href="https://www.truebornsons.com/donate-to-fwbc/" role="button">DONATE NOW &rsaquo;</a>
-              </div>
-              <blockquote class="blockquote">
+            </div>
+            <blockquote class="blockquote">
                 <p class="mb-0">“Holding fast the faithful word as he hath been taught, that he may be able by sound doctrine both to exhort and to convince the gainsayers.”</p>
                 <footer class="blockquote-footer">Titus 1:9 <cite title="Source Title">KJV</cite></footer>
-              </blockquote>
-            </div>
-          </div>
+            </blockquote>
         </div>
+    </div>
+</div>
