--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -3962,7 +3962,7 @@ tbody.collapse.show {
 
 .nav-pills .nav-link {
   border-radius: 0.25rem;
-  font-family: Gotham-Black;
+  font-family: Gotham;
 }
 
 .nav-pills .nav-link.active,
