--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -4935,7 +4935,7 @@ tbody.collapse.show {
   display: inline-block;
   padding: 0.25em 0.4em;
   font-size: 75%;
-  font-family: Gotham-Bold;
+  font-family: Gotham;
   line-height: 1;
   color: #fff;
   text-align: center;
