--- a/app/views/shared/_side-bar.html.erb
+++ b/app/views/shared/_side-bar.html.erb
@@ -1,6 +1,6 @@
 <ul class="nav flex-column nav-pills">
     <li class="nav-item">
-        <%= link_to "Doctrinal Statement", controller: "doctrinalstatement", action: "show", class: "nav-link text-uppercase text-left" %>
+        <%= link_to "Doctrinal Statement", {controller: "doctrinalstatement"}, action: "show", class: "nav-link text-uppercase text-left" %>
     </li>
     <li class="nav-item">
         <a class="nav-link disabled text-uppercase text-left" href="#" role="button">Foreign Languages</a>
