--- a/app/views/shared/_side-bar.html.erb
+++ b/app/views/shared/_side-bar.html.erb
@@ -6,7 +6,7 @@
         <a class="nav-link disabled text-uppercase text-left" href="#" role="button">Foreign Languages</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-uppercase text-left" href="church-directory.html" role="button">Church Directory</a>
+        <%= link_to "Church Directory", churchdirectory_path, class: "nav-link text-uppercase text-left" %>
     </li>
     <li class="nav-item">
         <a class="nav-link text-uppercase text-left" href="https://get.google.com/albumarchive/117089279522537034856" target="_blank" role="button">Pictures</a>
