--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <nav class="navbar navbar-toggleable-xl navbar-light">
-        <a class="shadow navbar-brand mr-auto" href="index.html">
+        <a class="shadow navbar-brand mr-auto" href="https://faithfulword.herokuapp.com/">
             <%= image_tag "FWBC-LOGO-OFFICIAL.svg", height: '61', class: "d-inline-block align-top", alt: "Faithful Word Baptist Church" %>
         </a>
         <ul class="nav navbar-nav ">
