--- a/app/views/shared/_side-bar.html.erb
+++ b/app/views/shared/_side-bar.html.erb
@@ -18,19 +18,19 @@
         <a class="nav-link disabled text-uppercase text-left" href="#" role="button">Hymns</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-uppercase text-left" href="psalms.html" role="button">Psalms</a>
+        <%= link_to "Psalms", psalms_path, class: "nav-link text-uppercase text-left" %>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-uppercase text-left" href="radio.html" role="button">Radio</a>
+        <%= link_to "Radio", radio_path, class: "nav-link text-uppercase text-left" %>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-uppercase text-left" href="audio-bible.html" role="button">Audio Bible <span class="badge badge-warning">NEW</span></a>
+        <%= link_to "Audio Bible", audiobible_path, class: "nav-link text-uppercase text-left" %><span class="badge badge-warning">NEW</span>
     </li>
     <li class="nav-item">
         <a class="nav-link text-uppercase text-left" href="http://www.fwbcbotswana.com" role="button">Botswana</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-uppercase text-left" href="malawi.html" role="button">Malawi</a>
+        <%= link_to "Malawi", malawi_path, class: "nav-link text-uppercase text-left" %>
     </li>
     <li class="nav-item">
         <a class="nav-link text-uppercase text-left" href="https://www.truebornsons.com/donate-to-fwbc/" role="button">Donate</a>
