--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
         </a>
         <ul class="nav navbar-nav ">
           <li class="nav-item">
-              <a class="btn btn-outline-primary text-uppercase" href="preaching.html" role="button">Preaching</a>
+            <%= link_to "Preaching", preaching_path, class: "btn btn-outline-primary text-uppercase" %>
           </li>
           <li class="nav-item">
               <a class="btn btn-outline-primary text-uppercase" href="soulwinning.html" role="button">Soul Winning</a>
