navbar links more

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,22 +18,22 @@
             <%= link_to "Preaching", preaching_path, class: "btn btn-outline-primary text-uppercase" %>
           </li>
           <li class="nav-item">
-              <a class="btn btn-outline-primary text-uppercase" href="soulwinning.html" role="button">Soul Winning</a>
+            <%= link_to "Soul Winning", soulwinning_path, class: "btn btn-outline-primary text-uppercase" %>
           </li>
           <li class="nav-item">
-              <a class="btn btn-outline-primary text-uppercase" href="our-pastor.html" role="button">Our Pastor</a>
+            <%= link_to "Our Pastor", ourpastor_path, class: "btn btn-outline-primary text-uppercase" %>
           </li>
           <li class="nav-item">
-              <a class="btn btn-outline-primary text-uppercase" href="service-times.html" role="button">Service</a>
+            <%= link_to "Service", service_path, class: "btn btn-outline-primary text-uppercase" %>
           </li>
           <li class="nav-item">
-              <a class="btn btn-outline-primary text-uppercase" href="location.html" role="button">Location</a>
+            <%= link_to "Location", location_path, class: "btn btn-outline-primary text-uppercase" %>
           </li>
           <li class="nav-item">
-              <a class="btn btn-outline-primary text-uppercase" href="bible-memory.html" role="button">Bible Memory</a>
+            <%= link_to "Bible Memory", biblememory_path, class: "btn btn-outline-primary text-uppercase" %>
           </li>
           <li class="nav-item">
-              <a class="btn btn-outline-primary text-uppercase" href="events.html" role="button">Events</a>
+            <%= link_to "Events", events_path, class: "btn btn-outline-primary text-uppercase" %>
           </li>
         </ul>
       </nav>
