--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
         <hr>
         <div class="row">
           <div class="col">
-            <p>Faithful Word Baptist Church 2017<br><%= link_to "Privacy Policy", privacypolicy_path %> / <%= link_to "Terms and Conditions", privacypolicy_path %></p>
+            <p>Faithful Word Baptist Church 2017<br><%= link_to "Privacy Policy", privacypolicy_path %> / <%= link_to "Terms and Conditions", termsandconditions_path %></p>
           </div>
           <div class="col">
             <p class="text-right">Phone: (602) 456-1049<br>E-mail: faithfulword1@gmail.com</p>
