added mail to footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
             <p>Faithful Word Baptist Church 2017<br><%= link_to "Privacy Policy", privacypolicy_path %> / <%= link_to "Terms and Conditions", termsandconditions_path %></p>
           </div>
           <div class="col">
-            <p class="text-right">Phone: (602) 456-1049<br>E-mail: faithfulword1@gmail.com</p>
+            <p class="text-right">Phone: (602) 456-1049<br>E-mail: <%= mail_to "faithfulword1@gmail.com" %></p>
           </div>
         </div>
       </div>
