soulwinning container changes

--- a/app/views/soulwinning/show.html.erb
+++ b/app/views/soulwinning/show.html.erb
@@ -7,7 +7,7 @@
     </blockquote>
     <div class="row">
         <div class="col-6">
-            <div id="list-sw" class="container">
+            <div id="list-sw" class="">
                 <ul class="list-group">
                     <li class="list-group-item active">
                         <strong class="display-4">Official Soul-Winning Times</strong>
@@ -27,7 +27,7 @@
                 </ul>
             </div>
 
-            <div id="list-sw" class="container">
+            <div id="list-sw" class="">
                 <ul class="list-group">
                     <li class="list-group-item active">
                         <strong class="display-4">Regional Soul-Winning Groups</strong>
@@ -50,7 +50,7 @@
                 </ul>
             </div>
 
-            <div id="list-sw" class="container">
+            <div id="list-sw" class="">
                 <ul class="list-group">
                     <li class="list-group-item active">
                         <strong class="display-4">North Phoenix Soul-Winning</strong>
