--- a/app/views/service/show.html.erb
+++ b/app/views/service/show.html.erb
@@ -1,2 +1,22 @@
-<h1>Service#show</h1>
-<p>Find me in app/views/service/show.html.erb</p>
+<%= render "shared/banner" %>
+<div class="container">
+    <h1>Church Service Times</h1>
+    <ul class="list-group">
+        <li class="list-group-item active">
+            <strong class="display-4">Service Times</strong>
+        </li>
+        <li class="list-group-item justify-content-between">
+            Sunday Morning Preaching Service  
+            <span class="badge badge-default badge-pill">10:30 AM</span>
+        </li>
+        <li class="list-group-item justify-content-between">
+            Sunday Evening Preaching Service
+            <span class="badge badge-default badge-pill">6:30 PM</span>
+        </li>
+        <li class="list-group-item justify-content-between">
+            Wednesday Evening Bible Study
+            <span class="badge badge-default badge-pill">7:00 PM</span>
+        </li>
+    </ul>
+    <p>Children and infants of all ages are welcome in the services.</p>
+</div>
