--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,1 +1,165 @@
 <%= render "shared/banner" %>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h1>Events at Faithful Word Baptist Church</h1>
+      <p>
+        Please note: <span class="badge badge-primary">All</span> activities are <span class="badge badge-primary">always</span> free of charge, including food, prizes, supplies, etc. Please feel free to invite family and friends to any church-sponsored activity!
+      </p>
+      <p>
+        Upcoming 2017 Events:
+      </p>
+      
+      <div id="events-pad">
+        <div class="card">
+          <div class="card-block">
+            <h4 class="card-title">40 Day Revival</h4>
+            <h6 class="card-subtitle mb-2 text-muted">Jan 25 to Mar 5</h6>
+            <p class="card-text">Guyana</p>
+          </div>
+        </div>
+      </div>
+
+      <div id="events-pad">
+        <div class="card">
+          <div class="card-block">
+            <h4 class="card-title">Smalltown Soul-winning Marathon</h4>
+            <h6 class="card-subtitle mb-2 text-muted">January 28</h6>
+            <p class="card-text">Southern Arizona</p>
+          </div>
+        </div>
+      </div>
+
+      <div id="events-pad">
+        <div class="card">
+          <div class="card-block">
+            <h4 class="card-title">Pastor Anderson preaching at the 40 Day Revival in Guyana</h4>
+            <h6 class="card-subtitle mb-2 text-muted">Feb 28 to Mar 2 </h6>
+            <p class="card-text">Guyana</p>
+          </div>
+        </div>
+      </div>
+
+      <div id="events-pad">
+        <div class="card">
+          <div class="card-block">
+            <h4 class="card-title">Pastor Anderson preaching in Trinidad and Tobago</h4>
+            <h6 class="card-subtitle mb-2 text-muted">March 3</h6>
+            <p class="card-text">Trinidad and Tobago</p>
+          </div>
+        </div>
+      </div>
+
+      <div id="events-pad">
+        <div class="card">
+          <div class="card-block">
+            <h4 class="card-title">Pastor Anderson preaching at Verity Baptist Church</h4>
+            <h6 class="card-subtitle mb-2 text-muted">March 23</h6>
+            <p class="card-text">Sacramento, CA</p>
+          </div>
+        </div>
+      </div>
+
+      <div id="events-pad">
+        <div class="card">
+          <div class="card-block">
+            <h4 class="card-title">Pastor Anderson preaching at Stedfast Baptist Church</h4>
+            <h6 class="card-subtitle mb-2 text-muted">March 31</h6>
+            <p class="card-text">Fort Worth, TX</p>
+          </div>
+        </div>
+      </div>
+
+      <div id="events-pad">
+        <div class="card">
+          <div class="card-block">
+            <h4 class="card-title">Pastor Anderson preaching at Old Path Baptist Church</h4>
+            <h6 class="card-subtitle mb-2 text-muted">April 7</h6>
+            <p class="card-text">San Antonio, TX</p>
+          </div>
+        </div>
+      </div>
+
+      <div id="events-pad">
+        <div class="card">
+          <div class="card-block">
+            <h4 class="card-title">Church Camping Trip, Group 1</h4>
+            <h6 class="card-subtitle mb-2 text-muted">Apr 17 to 19</h6>
+            <p class="card-text">North Arizona</p>
+          </div>
+        </div>
+      </div>
+
+      <div id="events-pad">
+        <div class="card">
+          <div class="card-block">
+            <h4 class="card-title">Church Camping Trip, Group 2</h4>
+            <h6 class="card-subtitle mb-2 text-muted">Apr 20 to 22</h6>
+            <p class="card-text">North Arizona</p>
+          </div>
+        </div>
+      </div>
+
+      <div id="events-pad">
+        <div class="card">
+          <div class="card-block">
+            <h4 class="card-title">First Services of FWBC in Lilongwe, Malawi</h4>
+            <h6 class="card-subtitle mb-2 text-muted">April 30</h6>
+            <p class="card-text">Lilongwe, Malawi</p>
+          </div>
+        </div>
+      </div>
+
+      <div id="events-pad">
+        <div class="card">
+          <div class="card-block">
+            <h4 class="card-title">Soul-winning Marathon in New Orleans, LA</h4>
+            <h6 class="card-subtitle mb-2 text-muted">June 2</h6>
+            <p class="card-text">New Orleans, LA</p>
+          </div>
+        </div>
+      </div>
+
+      <div id="events-pad">
+        <div class="card">
+          <div class="card-block">
+            <h4 class="card-title">Soul-winning Marathon in Albuquerque, NM</h4>
+            <h6 class="card-subtitle mb-2 text-muted">June 24</h6>
+            <p class="card-text">Albuquerque, NM</p>
+          </div>
+        </div>
+      </div>
+
+      <div id="events-pad">
+        <div class="card">
+          <div class="card-block">
+            <h4 class="card-title">Soulwinning in Hermosillo, Sonora, Mexico</h4>
+            <h6 class="card-subtitle mb-2 text-muted">Jul 13 to Jul 15 </h6>
+            <p class="card-text">Hermosillo, Sonora, Mexico</p>
+          </div>
+        </div>
+      </div>
+
+      <div id="events-pad">
+        <div class="card">
+          <div class="card-block">
+            <h4 class="card-title">Pastor Anderson preaching at Red Hot Preaching Conference</h4>
+            <h6 class="card-subtitle mb-2 text-muted">July 27</h6>
+            <p class="card-text">Sacramento, CA</p>
+          </div>
+        </div>
+      </div>
+
+      <div id="events-pad">
+        <div class="card">
+          <div class="card-block">
+            <h4 class="card-title">First Services of Valiant Baptist Church in Jacksonville, FL</h4>
+            <h6 class="card-subtitle mb-2 text-muted">August 6</h6>
+            <p class="card-text">Jacksonville, FL</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
