--- a/app/views/malawi/show.html.erb
+++ b/app/views/malawi/show.html.erb
@@ -1,1 +1,11 @@
 <%= render "shared/banner" %>
+<div class="container">
+    <div class="row">
+        <div class="col-3">
+            <%= render "shared/side-bar" %>
+        </div>
+        <div class="col-9">
+            
+        </div>
+    </div>
+</div>
