--- a/app/views/shared/_side-bar.html.erb
+++ b/app/views/shared/_side-bar.html.erb
@@ -24,7 +24,7 @@
         <%= link_to "Radio", radio_path, class: "nav-link text-uppercase text-left" %>
     </li>
     <li class="nav-item">
-        <%= link_to "Audio Bible", audiobible_path, class: "nav-link text-uppercase text-left" %> <span class="badge badge-warning">NEW</span>
+        <span class="badge badge-warning">NEW</span> <%= link_to "Audio Bible", audiobible_path, class: "nav-link text-uppercase text-left" %>
     </li>
     <li class="nav-item">
         <a class="nav-link text-uppercase text-left" href="http://www.fwbcbotswana.com" role="button">Botswana</a>
