--- a/app/views/soulwinning/show.html.erb
+++ b/app/views/soulwinning/show.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Soul-Winning") %>
 <%= render "shared/banner" %>
 <div class="container">
     <h1>Soul Winning at Faithful Word Baptist Church</h1>
