--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,22 +18,22 @@
             <%= link_to "Preaching", preaching_path, class: "btn btn-outline-primary text-uppercase" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Soul Winning", soulwinning_path, class: "btn btn-outline-primary text-uppercase" %>
+            <%= link_to "Soul Winning", pages_soulwinning_path, class: "btn btn-outline-primary text-uppercase" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Our Pastor", ourpastor_path, class: "btn btn-outline-primary text-uppercase" %>
+            <%= link_to "Our Pastor", pages_ourpastor_path, class: "btn btn-outline-primary text-uppercase" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Service", service_path, class: "btn btn-outline-primary text-uppercase" %>
+            <%= link_to "Service", pages_service_path, class: "btn btn-outline-primary text-uppercase" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Location", location_path, class: "btn btn-outline-primary text-uppercase" %>
+            <%= link_to "Location", pages_location_path, class: "btn btn-outline-primary text-uppercase" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Bible Memory", biblememory_path, class: "btn btn-outline-primary text-uppercase" %>
+            <%= link_to "Bible Memory", pages_biblememory_path, class: "btn btn-outline-primary text-uppercase" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Events", events_path, class: "btn btn-outline-primary text-uppercase" %>
+            <%= link_to "Events", pages_events_path, class: "btn btn-outline-primary text-uppercase" %>
           </li>
         </ul>
       </nav>
