--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
             <%= link_to "Preaching", preaching_path, class: "btn btn-outline-primary text-uppercase" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Soul Winning", controller: "pages", action: "soulwinning", class: "btn btn-outline-primary text-uppercase" %>
+            <%= link_to "Soul Winning", pages_soulwinning_path, class: "btn btn-outline-primary text-uppercase" %>
           </li>
           <li class="nav-item">
             <%= link_to "Our Pastor", controller: "pages", action: "ourpastor", class: "btn btn-outline-primary text-uppercase" %>
