--- a/app/views/shared/_side-bar.html.erb
+++ b/app/views/shared/_side-bar.html.erb
@@ -1,12 +1,12 @@
 <ul class="nav flex-column nav-pills">
     <li class="nav-item">
-        <%= link_to "Doctrinal Statement", controller: "pages", action: "doctrinalstatement", class: "nav-link text-uppercase text-left" %>
+        <%= link_to "Doctrinal Statement", doctrinalstatement_path, class: "nav-link text-uppercase text-left" %>
     </li>
     <li class="nav-item">
         <a class="nav-link disabled text-uppercase text-left" href="#" role="button">Foreign Languages</a>
     </li>
     <li class="nav-item">
-        <%= link_to "Church Directory", controller: "pages", action: "churchdirectory", class: "nav-link text-uppercase text-left" %>
+        <%= link_to "Church Directory", churchdirectory_path, class: "nav-link text-uppercase text-left" %>
     </li>
     <li class="nav-item">
         <a class="nav-link text-uppercase text-left" href="https://get.google.com/albumarchive/117089279522537034856" target="_blank" role="button">Pictures</a>
@@ -18,19 +18,19 @@
         <a class="nav-link disabled text-uppercase text-left" href="#" role="button">Hymns</a>
     </li>
     <li class="nav-item">
-        <%= link_to "Psalms", controller: "pages", action: "psalms", class: "nav-link text-uppercase text-left" %>
+        <%= link_to "Psalms", psalms_path, class: "nav-link text-uppercase text-left" %>
     </li>
     <li class="nav-item">
-        <%= link_to "Radio", controller: "pages", action: "radio", class: "nav-link text-uppercase text-left" %>
+        <%= link_to "Radio", radio_path, class: "nav-link text-uppercase text-left" %>
     </li>
     <li class="nav-item">
-        <%= link_to "Audio Bible", controller: "pages", action: "audiobible", class: "nav-link text-uppercase text-left d-inline-block" %><span class="badge badge-warning d-inline-block">NEW</span>
+        <%= link_to "Audio Bible", audiobible_path, class: "nav-link text-uppercase text-left d-inline-block" %><span class="badge badge-warning d-inline-block">NEW</span>
     </li>
     <li class="nav-item">
         <a class="nav-link text-uppercase text-left" href="http://www.fwbcbotswana.com" role="button">Botswana</a>
     </li>
     <li class="nav-item">
-        <%= link_to "Malawi", controller: "pages", action: "malawi", class: "nav-link text-uppercase text-left" %>
+        <%= link_to "Malawi", malawi_path, class: "nav-link text-uppercase text-left" %>
     </li>
     <li class="nav-item">
         <a class="nav-link text-uppercase text-left" href="https://www.truebornsons.com/donate-to-fwbc/" role="button">Donate</a>
