--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,19 +21,19 @@
             <%= link_to "Soul Winning", soulwinning_path, class: "btn btn-outline-primary text-uppercase" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Our Pastor", controller: "pages", action: "ourpastor", class: "btn btn-outline-primary text-uppercase" %>
+            <%= link_to "Our Pastor", ourpastor_path, class: "btn btn-outline-primary text-uppercase" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Service", controller: "pages", action: "service", class: "btn btn-outline-primary text-uppercase" %>
+            <%= link_to "Service", service_path, class: "btn btn-outline-primary text-uppercase" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Location", controller: "pages", action: "location", class: "btn btn-outline-primary text-uppercase" %>
+            <%= link_to "Location", location_path, class: "btn btn-outline-primary text-uppercase" %>
           </li>"
           <li class="nav-item">
-            <%= link_to "Bible Memory", controller: "pages", action: "biblememory", class: "btn btn-outline-primary text-uppercase" %>
+            <%= link_to "Bible Memory", biblememory_path, class: "btn btn-outline-primary text-uppercase" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Events", controller: "pages", action: "events", class: "btn btn-outline-primary text-uppercase" %>
+            <%= link_to "Events", events_path, class: "btn btn-outline-primary text-uppercase" %>
           </li>
         </ul>
       </nav>
