--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -18,7 +18,7 @@ body {
 
 @font-face{
   font-family: "Gotham-Thin";
-  src: font-url('Gotham-Thin.otf') format('opentype');
+  src: url(asset-path('fonts/Gotham-Thin.otf')) format('opentype');
 }
 
 @font-face{
@@ -60,7 +60,7 @@ body {
 
 @font-face{
   font-family: "Gotham";
-  src: font-url('Gotham-Medium.otf') format('opentype');
+  src: url(asset-path('fonts/Gotham-Medium.otf')) format('opentype');
 }
 @font-face{
   font-family: "GothamIta";
@@ -69,7 +69,7 @@ body {
 
 @font-face{
   font-family: "Gotham-Bold";
-  src: font-url('Gotham-Bold.otf') format('opentype');
+  src: url(asset-path('fonts/Gotham-Bold.otf')) format('opentype');
 }
 
 @font-face{
