--- a/app/assets/stylesheets/bootstrap.css.erb
+++ b/app/assets/stylesheets/bootstrap.css.erb
@@ -18,7 +18,7 @@ body {
 
 @font-face{
   font-family: "Gotham-Thin";
-  src: url('<%= asset_path('fonts/Gotham-Thin.otf') %>')) format('opentype');
+  src: url('<%= asset_path('fonts/Gotham-Thin.otf') %>') format('opentype');
 }
 
 @font-face{
