--- a/app/assets/stylesheets/bootstrap.css.erb
+++ b/app/assets/stylesheets/bootstrap.css.erb
@@ -69,7 +69,7 @@ body {
 
 @font-face{
   font-family: "Gotham-Bold";
-  src: url('<%= asset_path('fonts/Gotham-Bold.otf') %>') format('opentype');
+  src: url('<%= asset_path('fonts/Gotham-Bold.otf') %>');
 }
 
 @font-face{
