--- a/app/assets/stylesheets/bootstrap.css.erb
+++ b/app/assets/stylesheets/bootstrap.css.erb
@@ -3911,7 +3911,7 @@ tbody.collapse.show {
 .nav-link {
   display: block;
   padding: 0.5em 1em;
-  font-family: Gotham-Bold;
+  font-family: Arial;
 }
 
 .nav-link:focus, .nav-link:hover {
