--- a/app/assets/stylesheets/bootstrap.css.erb
+++ b/app/assets/stylesheets/bootstrap.css.erb
@@ -3963,7 +3963,7 @@ tbody.collapse.show {
 
 .nav-pills .nav-link {
   border-radius: 0.25rem;
-  font-family: Gotham;
+  font-family: Gotham-Bold;
 }
 
 .nav-pills .nav-link.active,
