--- a/app/assets/stylesheets/bootstrap.css.erb
+++ b/app/assets/stylesheets/bootstrap.css.erb
@@ -3911,7 +3911,6 @@ tbody.collapse.show {
 .nav-link {
   display: block;
   padding: 0.5em 1em;
-  font-family: Arial;
 }
 
 .nav-link:focus, .nav-link:hover {
@@ -3963,7 +3962,7 @@ tbody.collapse.show {
 
 .nav-pills .nav-link {
   border-radius: 0.25rem;
-  font-family: Gotham-Bold;
+  font-family: Gotham-Black;
 }
 
 .nav-pills .nav-link.active,
