--- a/app/assets/stylesheets/bootstrap.css.erb
+++ b/app/assets/stylesheets/bootstrap.css.erb
@@ -23,39 +23,39 @@ body {
 
 @font-face{
   font-family: "Gotham-ThinIta";
-  src: url('fonts/Gotham-ThinIta.otf') format('opentype');
+  src: url('<%= asset_path('fonts/Gotham-ThinIta.otf') %>');
 }
 
 @font-face{
   font-family: "Gotham-xLight";
-  src: url('fonts/Gotham-XLight.otf') format('opentype');
+  src: url('<%= asset_path('fonts/Gotham-XLight.otf') %>');
 }
 
 @font-face{
   font-family: "Gotham-xLightIta";
-  src: url('fonts/Gotham-XLightIta.otf') format('opentype');
+  src: url('<%= asset_path('fonts/Gotham-XLightIta.otf') %>');
 }
 
 @font-face{
   font-family: "Gotham-Light";
-  src: url('fonts/Gotham-Light.otf') format('opentype');
+  src: url('<%= asset_path('fonts/Gotham-Light.otf') %>');
 }
 
 @font-face{
   font-family: "Gotham-LightIta";
-  src: url('fonts/Gotham-LightIta.otf') format('opentype');
+  src: url('<%= asset_path('fonts/Gotham-LightIta.otf') %>');
 }
 
 @font-face{
   font-family: "Gotham-Book";
   font-weight: bolder;
-  src: url('fonts/Gotham-Book.otf') format('opentype');
+  src: url('<%= asset_path('fonts/Gotham-Book.otf') %>');
 }
 
 @font-face{
   font-family: "Gotham-BookIta";
   font-weight: bolder;
-  src: url('fonts/Gotham-BookIta.otf') format('opentype');
+  src: url('<%= asset_path('fonts/Gotham-BookIta.otf') %>');
 }
 
 @font-face{
@@ -64,7 +64,7 @@ body {
 }
 @font-face{
   font-family: "GothamIta";
-  src: url('fonts/Gotham-MediumIta.otf') format('opentype');
+  src: url('<%= asset_path('fonts/Gotham-MediumIta.otf') %>');
 }
 
 @font-face{
@@ -74,27 +74,27 @@ body {
 
 @font-face{
   font-family: "Gotham-BoldIta";
-  src: url('fonts/Gotham-BoldIta.otf') format('opentype');
+  src: url('<%= asset_path('fonts/Gotham-BoldIta.otf') %>');
 }
 
 @font-face{
   font-family: "Gotham-Black";
-  src: url('fonts/Gotham-Black.otf') format('opentype');
+  src: url('<%= asset_path('fonts/Gotham-Black.otf') %>');
 }
 
 @font-face{
   font-family: "Gotham-BlackIta";
-  src: url('fonts/Gotham-BlackIta.otf') format('opentype');
+  src: url('<%= asset_path('fonts/Gotham-BlackIta.otf') %>');
 }
 
 @font-face{
   font-family: "Gotham-Ultra";
-  src: url('fonts/Gotham-Ultra.otf') format('opentype');
+  src: url('<%= asset_path('fonts/Gotham-Ultra.otf') %>');
 }
 
 @font-face{
   font-family: "Gotham-UlraIta";
-  src: url('fonts/Gotham-UltraIta.otf') format('opentype');
+  src: url('<%= asset_path('fonts/Gotham-UltraIta.otf') %>');
 }
 
 
