--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -42,7 +42,7 @@
             <%= render "shared/side-bar" %>
         </div>
         <div class="col-9">
-            <h1>Welcome to the website of Faithful Word Baptist Church!</h1>
+            <h1>Welcome to the website of<br>Faithful Word Baptist Church!</h1>
             <p>Over 13 million mp3 sermons have been downloaded from this site!</p>
             <p>We are a local New Testament church reaching the Phoenix area with the Gospel of Jesus Christ. Don't expect anything contemporary or liberal. We are an
             <span class="badge badge-pill badge-success">old-fashioned</span>
